remove --enable-preview from JavaExec since it's no longer needed with JDK21